Separate the ProjectGalleryElement into a new stylesheet  + fixed bug where the hover effect would not always trigger on mobile device

--- a/src/Styles/ProjectGalleryPageStyle.css
+++ b/src/Styles/ProjectGalleryPageStyle.css
@@ -30,58 +30,3 @@
 {
     display: grid;
 }
-
-.ProjectSection {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: baseline;
-    margin: 5px;
-    border-style: solid;
-    border-width: 5px;
-    background-color: var(--secondary);
-    border-color: var(--primary);
-    border-radius: 5px;
-    transition-duration: 500ms;
-
-    position: relative;
-}
-
-.ProjectSection:hover
-{
-    border-color: var(--hover);
-}
-
-.ProjectSection > p
-{
-    flex-grow: 1;
-    padding-left: 1%;
-    padding-right: 1%;
-}
-
-.ProjectImage
-{
-   border-radius: 10px;
-   margin: 10px;
-   height: 200px;
-   object-fit: cover;
-}
-
-.ProjectSectionButton
-{
-	background-color: var(--primary);
-	color: var(--secondary);
-	font-size: 15px;
-	border-radius: 5px;
-	padding: 10px;
-    margin: 5px;
-    align-self: center;
-	text-decoration: none;
-    transition-duration: 500ms;
-}
-
-.ProjectSectionButton:hover
-{
-	background-color: var(--hover);
-    transition-duration: 500ms;
-}
